0030870: Data Exchange - Add the support for empty draughting models and empty presentation layer assignments for step import

Protections to avoid exception in the methods  RWStepVisual_RWDraughtingModel::ReadStep and RWStepVisual_RWPresentationLayerAssignment::ReadStep for case when assigned items are absent were added